--- a/part1/exercises/src/components/ChoresList.module.css
+++ b/part1/exercises/src/components/ChoresList.module.css
@@ -1,7 +1,11 @@
-.choresText {
-   color: black;
+.choresText {   
+   color: red;
+   font-size: 1.3vw;
+   font-style: italic;
+   
 }
 
 .choresHeading {
    color: black;
+   text-decoration: underline;
 }
